[gd_scene load_steps=10 format=3 uid="uid://buge4g4reo3xx"]

[ext_resource type="Script" path="res://main.gd" id="1_yvfv6"]
[ext_resource type="AudioStream" uid="uid://ggd2oix4sp2d" path="res://Three Red Hearts - Pixel War 1.ogg" id="3_jwswu"]
[ext_resource type="AudioStream" uid="uid://bnqjl0xm6nghp" path="res://impactTin_medium_003.ogg" id="4_mtoao"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m3uxu"]
size = Vector2(1161, 77)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hhaxh"]
size = Vector2(1177, 19)

[sub_resource type="LabelSettings" id="LabelSettings_74bd3"]
font_size = 160
font_color = Color(1, 1, 0.12549, 1)
outline_size = 10
outline_color = Color(1, 0.298039, 1, 1)
shadow_size = 10
shadow_color = Color(0.698039, 0, 0, 0)

[sub_resource type="Animation" id="Animation_6k7fg"]
resource_name = "slide in"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(167, -425), Vector2(171, -30)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Button:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 1.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(430, 673), Vector2(436, 426)]
}

[sub_resource type="Animation" id="Animation_3orod"]
length = 10.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(167, -425)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Button:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(430, 673)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jq2sb"]
_data = {
"RESET": SubResource("Animation_3orod"),
"slide in": SubResource("Animation_6k7fg")
}

[node name="main" type="Node2D"]
script = ExtResource("1_yvfv6")

[node name="background" type="ColorRect" parent="."]
offset_right = 1150.0
offset_bottom = 649.0
color = Color(0.815686, 1, 1, 1)
metadata/_edit_lock_ = true

[node name="floor" type="Area2D" parent="."]
position = Vector2(1, 576)
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="floor_Collision" type="CollisionShape2D" parent="floor"]
position = Vector2(568.5, 38.5)
shape = SubResource("RectangleShape2D_m3uxu")

[node name="floor_Grass" type="ColorRect" parent="floor"]
offset_right = 1149.0
offset_bottom = 79.0
color = Color(0.68748, 0.599248, 0.474166, 1)

[node name="floor-Dirt" type="ColorRect" parent="floor"]
offset_right = 1151.0
offset_bottom = 31.0
color = Color(0.588384, 0.738487, 0.425349, 1)

[node name="barrier" type="StaticBody2D" parent="."]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="barrier"]
position = Vector2(578.5, -34.5)
shape = SubResource("RectangleShape2D_hhaxh")

[node name="barrier2" type="StaticBody2D" parent="."]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="barrier2"]
position = Vector2(575, 595)
shape = SubResource("RectangleShape2D_hhaxh")

[node name="rock_timer" type="Timer" parent="."]
wait_time = 0.7
autostart = true

[node name="sfx" type="Node2D" parent="."]

[node name="bgm" type="AudioStreamPlayer2D" parent="sfx"]
stream = ExtResource("3_jwswu")
pitch_scale = 1.3
autoplay = true

[node name="hit_Sound" type="AudioStreamPlayer2D" parent="sfx"]
stream = ExtResource("4_mtoao")
volume_db = 24.0

[node name="game_Over" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="game_Over"]
layout_mode = 0
offset_left = 430.0
offset_top = 673.0
offset_right = 720.0
offset_bottom = 727.0
text = "Play Agin

"

[node name="Label" type="Label" parent="game_Over"]
layout_mode = 0
offset_left = 167.0
offset_top = -425.0
offset_right = 1035.0
offset_bottom = 16.0
text = "Game Over 
Loser"
label_settings = SubResource("LabelSettings_74bd3")
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="game_Over"]
libraries = {
"": SubResource("AnimationLibrary_jq2sb")
}

[connection signal="timeout" from="rock_timer" to="." method="_on_rock_timer_timeout"]
[connection signal="button_down" from="game_Over/Button" to="." method="_on_button_button_down"]
